--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+  background-color: #282D35;
+  ;
+  width: 550px;
+  height: 459px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav {
+  background-color: #21222A;
+  ;
+  width: 550px;
+  height: 91px;
+  display: flex;
+  
+}
+
+img {
+  width: 158px;
+  height: 28.93px;
+  display: flex;
+}
+
+.nav-item {
+  font-family: Inter;
+  font-weight: 600;
+  line-height: 19.36px;
+  color: #DEEBF8;
+  display: inline-block;
 }
