--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   background-color: #282D35;
   ;
   width: 550px;
-  height: 459px;
+  height: 550px;
 }
 
 .nav {
@@ -11,6 +11,7 @@
   width: 550px;
   height: 91px;
   display: flex;
+  justify-content: space-between;
   
 }
 
@@ -18,6 +19,9 @@ img {
   width: 158px;
   height: 28.93px;
   display: flex;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 26px;
 }
 
 .nav-item {
@@ -26,4 +30,42 @@ img {
   line-height: 19.36px;
   color: #DEEBF8;
   display: inline-block;
+  /* width: 259px; */
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 26px;
+}
+
+
+.main {
+  color: #fff;
+  padding:27px;
+  font-family: Inter;
+  background-image: url("./images/react-icon.svg");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: 75%;
+}
+
+.title {
+  font-size: 39.06px;
+  font-weight: 700;
+  line-height: 47.27px;
+  letter-spacing: -0.05em;
+}
+
+li {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19.36px;
+  padding-top: 20.36px;
+  width: 390px;
+
+}
+
+
+
+li::marker {
+  font-size: 1.5rem;
+  color: #61dafb;
 }
